koulutus ja työkokemus

--- a/index.html
+++ b/index.html
@@ -13,6 +13,52 @@
 
 <body>
 
+<div class="leipateksti">
+  <h1>Aapo Koivula</h1>
+
+  <p class="kuvausminusta">Olen pelannut jalkapalloa koko elämäni ja viimeiset kesät ovat kuluneen pelatessa kilpailullista
+jalkapalloa. Jalkapalloa pelatessa ja kuntosalilla käydessä olen oppinut hyvät
+sosiaaliset taidot.<p>
+
+  <h2>Työkokemus</h2>
+
+  <h4>K-Supermarket Valtari, Kouvola</h4>
+
+  <p>Harjoittelun aikana kehitin tiimityötaitojani, harjaannuin
+    asiakaspalvelussa sekä opin työskentelemään tehokkaasti
+    kiireisessä ympäristössä. Perehdyin varaston hallintaan, hyllyjen täyttämiseen sekä
+    tuotteiden esillepanoon. Sain myös perustason koulutusta kassatyöskentelystä.</p> 
+
+  <h2>Koulutus</h2>
+
+  <h4>Helsingin yliopisto</h4>
+
+  <p>Tietojenkäsittelytieteen
+    kandidaatti</p>
+
+  <h4>Kouvolan yhteislyseo</h4>
+
+  <p>Ylioppilas</p>
+
+</div>
+
+<div class="vasen_laita">
+  <h3>Taidot:</h3>
+  <ul>
+    <li>Koodauskielet:</li>
+	<ul>
+      <li>Python</li>
+	    <li>C++</li>
+      <li>C</li>
+	</ul>
+    <li>Muut ohjelmointitaidot</li>
+	<ul>
+	  <li>HTML</li>
+	  <li>CSS</li>
+	</ul>
+  </ul>
+</div>
+
 </body>
 
 </html>
