--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ sosiaaliset taidot.<p>
     <li>Koodauskielet:</li>
 	<ul>
       <li>Python</li>
-	    <li>C++</li>
-      <li>C</li>
+      <li>Haskell</li>
 	</ul>
     <li>Muut ohjelmointitaidot</li>
 	<ul>
