Added github profile and email

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ sosiaaliset taidot.<p>
 	  <li>CSS</li>
 	</ul>
   </ul>
+  <h3>Tiedot:
+    <a href="https://github.com/aapokoiv">Github</a>
+    <p>koivula.aapo@gmail.com</p>
 </div>
 
 </body>
